# dsh-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  makefile
dsh-api/: Cargo.toml  README.md  README_CRATES_IO.md  build.rs  default-platforms.json
dsh-api-build/: Cargo.toml  README.md
dsh-api-build/examples/: build_generic.rs  generate_generic.rs  generate_wrapped.rs  openapi-updated.json  update_openapi.rs
dsh-api-build/src/: dsh_api_operation.rs  generate_client.rs  generate_generic.rs  generate_wrapped.rs  lib.rs  openapi_utils.rs  update_openapi.rs
dsh-api-generated/: Cargo.toml  build.rs
dsh-api-generated/src/: display.rs  lib.rs
dsh-api-macros/: Cargo.toml
dsh-api-macros/src/: lib.rs
dsh-api-raw/: Cargo.toml
dsh-api-raw/src/: lib.rs
dsh-api/examples/: app.rs  app_catalog.rs  app_catalog_app_configuration.rs  app_catalog_manifest.rs  app_configuration.rs  app_manifest.rs  application.rs  application_derived.rs  application_functions.rs  bucket.rs  build_generic.rs  certificate.rs  client.rs  common.rs  diff.rs  generic.rs  limits.rs  platform.rs  reflective.rs  secret.rs  stream.rs  tasks.rs  tenant.rs  token.rs  vhost.rs  volume.rs
dsh-api/openapi_spec/: openapi_1_10_0.json  openapi_1_9_0.json  openapi_1_9_0_patch.json  openapi_1_9_2.json  openapi_1_9_2_preview.yml
dsh-api/src/: app.rs  app_catalog.rs  app_catalog_app_configuration.rs  app_catalog_manifest.rs  app_configuration.rs  app_manifest.rs  application.rs  application_types.rs  bucket.rs  certificate.rs  database.rs  default.rs  display.rs  dsh_api_client.rs  dsh_api_client_factory.rs  dsh_api_tenant.rs  dsh_jwt.rs  generic.rs  lib.rs  manifest.rs  new.rs  parse.rs  platform.rs  proxy.rs  query_processor.rs  secret.rs  stream.rs  tenant.rs  token_fetcher.rs  topic.rs  version.rs  vhost.rs  volume.rs  wrapped.rs
dsh-api/src/diagrams/: certificate.mmd
dsh-api/tests/: application_tests.rs  certificate_test.rs  certificate_tests.rs  common.rs  new_tests.rs  parse_tests.rs  query_processor_tests.rs  tenant_tests.rs  version_tests.rs  vhost_tests.rs
info/: application-configuration-map.json  manifest-schema-definition.json  manifests-deserialized.json  manifests.json  service-definition.json
