# root
[workspace]
resolver = "2"
members = [
    "dsh-api",
    "dsh-api-generated",
    "dsh-api-macros"
]

[workspace.package]
authors = ["Unibox Team <unibox@kpn.com>"]
description = "DSH Resource Management Api Client"
edition = "2021"
rust-version = "1.77"
version = "0.1.0"
publish = ["artifactory"]
