# root
[workspace]
members = [
    "dsh-api",
    "dsh-api-build"
]
resolver = "2"

[workspace.package]
authors = ["Wilbert Schelvis, <wilbert.schelvis@kpn.com>", "KPN DSH Team, <unibox@kpn.com>"]
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "DSH resource management API client"
edition = "2021"
homepage = "https://www.kpn.com/dsh"
keywords = ["kpn", "dsh", "rest", "api", "client"]
license = "Apache-2.0"
repository = "https://github.com/kpn-dsh/dsh-api"
rust-version = "1.77.2"
version = "0.4.1"
