# dsh-api-build
[package]
publish = false
name = "dsh_api_build_helpers"
readme = "README_CRATES_IO.md"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indoc = "2.0"
itertools = "0.14"
openapiv3 = "2"
prettyplease = "0.1"
progenitor = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "1"
lazy_static = "1.5.0"
