# dsh-api-build
[package]
name = "dsh_api_build_helpers"
readme = "README.md"
version = "0.6.2"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indoc = "2.0"
itertools = "0.14"
openapiv3 = "2"
prettyplease = "0.1"
progenitor = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "1"
