# dsh-api-generated
[package]
name = "dsh-api-generated"
version = "0.1.0"
edition = "2021"
description = "REST API client for KPN Data Services Hub"
keywords = ["kpn", "dsh", "rest", "api", "client"]

[dependencies]
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
progenitor-client = "0.7"
regress = "0.10"
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prettyplease = "0.1"
progenitor = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "1.0"
