# dsh-api-generated
[package]
name = "dsh-api-generated"
description = "DSH resource management API client (generated code)"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = "0.7"
regress = "0.10"
reqwest = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prettyplease = "0.1"
progenitor = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "1"
