# dsh-api
[package]
name = "dsh_api"
readme = "README_CRATES_IO.md"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
actual = []
generic = ["dep:erased-serde"]

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dsh_sdk = { version = "0.4", features = ["rest-token-fetcher"], default-features = false }
erased-serde = { version = "0.4", optional = true }
futures = "0.3"
itertools = "0.13"
lazy_static = "1"
log = "0.4"
progenitor-client = "0.7"
regex = "1"
regress = "0.10"
reqwest = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "0.11"
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = { version = "0.8", features = ["display"] }

[build-dependencies]
dsh_api_build = { version = "0.4.0", path = "../dsh-api-build" }
openapiv3 = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
