# dsh-api
[package]
name = "dsh_api"
readme = "README.md"
version = "0.6.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
generic = ["dep:erased-serde"]
manage = []
robot = []

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dsh_sdk = { version = "0.6.1", features = ["bootstrap", "management-api-token-fetcher"], default-features = false }
erased-serde = { version = "0.4", optional = true }
futures = "0.3"
itertools = "0.13"
lazy_static = "1"
log = "0.4"
progenitor-client = "0.7"
regex = "1"
regress = "0.10"
reqwest = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "0.11"
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = { version = "0.8", features = ["display"] }

[build-dependencies]
#dsh_api_build_helpers = { path = "../dsh-api-build" }
dsh_api_build_helpers = "0.6.1"
openapiv3 = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
