# dsh-api
[package]
name = "dsh_api"
readme = "README.md"
version = "0.7.2"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
generic = ["dep:erased-serde"]
manage = []
robot = []

[dependencies]
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false }
erased-serde = { version = "0.4", optional = true, features = ["std"], default-features = false }
futures = { version = "0.3", features = ["alloc", "async-await"], default-features = false }
itertools = { version = "0.13", features = ["default"], default-features = false }
lazy_static = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
progenitor-client = { version = "0.7", default-features = false }
regex = { version = "1", default-features = false }
regress = { version = "0.10", features = ["std"], default-features = false }
reqwest = "0.11"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false }

[dev-dependencies]
env_logger = "0.11"
mockito = "1.7.0"
reqwest = { version = "0.11", features = ["__rustls"] }
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = { version = "0.8", features = ["display"] }

[build-dependencies]
dsh_api_build_helpers = { path = "../dsh-api-build" }
#dsh_api_build_helpers = "0.6.2"
openapiv3 = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
